# translate-loop

./: .gitignore  README.md  config.json  install.sh  pyproject.toml
src/translate_loop/: cli.py
src/translate_loop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
